update language and elem of interface

--- a/app/css/foundation.css
+++ b/app/css/foundation.css
@@ -748,7 +748,7 @@ button {
   float: left; }
 
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 40em) {
   .medium-1 {
     width: 8.33333%; }
   .medium-push-1 {
@@ -956,7 +956,7 @@ button {
     margin-right: 0;
     float: left; } }
 
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 75em) {
   .large-1 {
     width: 8.33333%; }
   .large-push-1 {
