--- a/app/templates/pages/account-info.html
+++ b/app/templates/pages/account-info.html
@@ -1,5 +1,14 @@
-<b>account info</b>
-<p>accountNumber: {{accountNumber}}</p>
-<p>supplier: {{supplierId}}</p>
-<p>money: {{money}}</p>
-<p>discount: {{discount}}</p>
+<div class="small-12 account-info block-component clearfix">
+    <div class="small-6 columns">
+        <div class="inner-account-info">
+            <h4>ЗАО «Стройтехинжиниринг»</h4>
+            <p>Номер счета: {{accountNumber}}</p>
+            <p>supplier: {{supplierId}}</p>
+            <p>Деньги: {{money}} рублей</p>
+            <p>Скидка: {{discount}}</p>
+        </div>
+    </div>
+    <div class="small-6 columns chart-item" id="chart-item">
+
+    </div>
+</div>
