--- a/app/templates/pages/accounts.html
+++ b/app/templates/pages/accounts.html
@@ -1,10 +1,10 @@
 <div class="inner-accounts">
     <div class="tabs">
         <ul class="inner-tabs">
-            <li><a href="#accounts/new">New</a></li>
-            <li><a href="#accounts/get">Get</a></li>
-            <li><a href="#accounts/aprove">Aprove</a></li>
-            <li><a href="#accounts/resolve">Resolve</a></li>
+            <li><a href="#accounts/new">Новые</a></li>
+            <li><a href="#accounts/get">Полученные предложения</a></li>
+            <li><a href="#accounts/aprove">Подтверденные поставщиком</a></li>
+            <li><a href="#accounts/resolve">Финализированные</a></li>
         </ul>
     </div>
     <div id="accountContainer" class="panel">
