--- a/app/templates/pages/auth.html
+++ b/app/templates/pages/auth.html
@@ -1,27 +1,28 @@
 <div class="small-6 columns elem-login-panel-left">
     <div class="brand-login">
-        <h3>Brand company</h3>
-        <h4 class="subheader">Description brand company</h4>
+        <h3>KPMG</h3>
+        <small>cutting through complexity</small>
+        <h4 class="subheader">Казначейская платформа</h4>
         <div class="company-image-login"></div>
     </div>
 </div>
 <div class="small-6 columns elem-login-panel-right">
     <div class="menu-auth">
         <ul>
-            <li><a href="#auth">Login</a></li>
-            <li><a href="#auth/register">Register</a></li>
+            <li><a href="#auth">Войти</a></li>
+            <li><a href="#auth/register">Регистрация</a></li>
         </ul>
     </div>
     <div class="auth-form small-10 small-centered">
         <div class="inner-form">
             <div class="row">
-                <input id="loginInput" type="text" placeholder="Enter your name"/>
+                <input id="loginInput" type="text" placeholder="Введите ваш логин"/>
             </div>
             <div class="row">
-                <input id="passwordInput" type="password" placeholder="Enter your password"/>
+                <input id="passwordInput" type="password" placeholder="введите ваш пароль"/>
             </div>
             <div class="button-group">
-                <a href="javascript:void(0)" class="button btn-info expanded" on-click="login">Login</a>
+                <a href="javascript:void(0)" class="button btn-info expanded" on-click="login">Войти</a>
             </div>
         </div>
     </div>
