--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -1,7 +1,7 @@
 <div class="dashboard-wrapper clearfix">
     <div class="small-12 small-medium-12 medium-8 columns">
         <div class="small-12 small-centered clearfix">
-            <div class="small-6 columns">
+            <div class="large-6 medium-6 small-12 columns">
                 <div class="small-12 small-centered block-component notification-component">
                     <h3>Уведомления<div class="label-count">23</div></h3>
                     <ul>
@@ -17,7 +17,7 @@
                     </div>
                 </div>
             </div>
-            <div class="small-6 columns">
+            <div class="large-6 medium-6 small-12 columns">
                 <div class="small-12 small-centered block-component clearfix">
                     <div class="small-12 medium-12 large-6 columns">
                         <h3 style="text-align: center">Общая сумма выплат</h3>
@@ -46,6 +46,14 @@
                     <div class="button-group">
                         <a href="#accounts/new" class="button btn-info">Перейти >></a>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="small-12 small-centered clearfix">
+            <div class="small-12 columns">
+                <div class="small-12 block-component small-centered">
+                    <h3>График</h3>
+                    <div id="container" style="min-width: 310px; height: 400px;"></div>
                 </div>
             </div>
         </div>
