--- a/app/templates/pages/notifications.html
+++ b/app/templates/pages/notifications.html
@@ -3,33 +3,26 @@
         <div class="small-12 small-centered block-component notification-component">
             <ul>
                 <li class="callout primary">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Есть новые предложения от поставщиков, ожидающие подтверждения
                 </li>
                 <li class="callout alert">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Получено сообщение от поставщика ООО «ЗаботаПлюс»
                 </li>
 
                 <li class="callout primary">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Есть новые предложения от поставщиков, ожидающие подтверждения
                 </li>
                 <li class="callout warning">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Есть новые предложения от поставщиков, ожидающие подтверждения
                 </li>
                 <li class="callout primary">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Получено сообщение от поставщика ООО «ЗаботаПлюс»
                 </li>
                 <li class="callout alert">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Есть новые предложения от поставщиков, ожидающие подтверждения
                 </li>
                 <li class="callout warning">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
-                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Получено сообщение от поставщика ООО «ЗаботаПлюс»
                 </li>
 
             </ul>
