--- a/app/templates/pages/register.html
+++ b/app/templates/pages/register.html
@@ -1,19 +1,28 @@
 <div class="small-6 columns elem-login-panel-left">
     <div class="brand-login">
-        <h3>Brand company</h3>
-        <h4 class="subheader">Description brand company</h4>
+        <h3>KPMG</h3>
+        <small>cutting through complexity</small>
+        <h4 class="subheader">Казначейская платформа</h4>
         <div class="company-image-login"></div>
     </div>
 </div>
 <div class="small-6 columns elem-login-panel-right">
     <div class="menu-auth">
         <ul>
-            <li><a href="#auth">Login</a></li>
-            <li><a href="#auth/register">Register</a></li>
+            <li><a href="#auth">Войти</a></li>
+            <li><a href="#auth/register">Регистрация</a></li>
         </ul>
     </div>
     <div class="auth-form small-10 small-centered">
         <div class="inner-form">
+            <div class="row">
+                <input id="radio1" checked name="typeUser" type="radio"/>
+                <label for="radio1"> Поставщик
+                </label>
+                <input id="radio2" name="typeUser" type="radio"/>
+                <label for="radio2"> Покупатель
+                </label>
+            </div>
             <div class="row">
                 <input id="loginInput" type="text" placeholder="Enter your name"/>
             </div>
@@ -27,7 +36,7 @@
                 <input id="countryInput" type="text" placeholder="Enter your country"/>
             </div>
             <div class="button-group">
-                <a href="javascript:void(0)" class="button btn-info expanded" on-click="login">Register</a>
+                <a href="javascript:void(0)" class="button btn-info expanded" on-click="login">Регистрация</a>
             </div>
         </div>
     </div>
