edit header of dashboard

--- a/app/templates/pages/notifications.html
+++ b/app/templates/pages/notifications.html
@@ -1,4 +1,4 @@
-<div class="inner-notifications">
+<div class="inner-notifications clearfix">
     <div class="small-12 columns">
         <div class="small-12 small-centered block-component notification-component">
             <ul>
