--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -1,5 +1,5 @@
 <div class="dashboard-wrapper clearfix">
-    <div class="small-12 small-medium-12 medium-8 columns">
+    <div class="small-12 small-medium-12 medium-8 columns" style="padding:0;">
         <div class="small-12 small-centered clearfix">
             <div class="large-6 medium-6 small-12 columns">
                 <div class="small-12 small-centered block-component notification-component">
@@ -20,7 +20,7 @@
             <div class="large-6 medium-6 small-12 columns">
                 <div class="small-12 small-centered block-component clearfix">
                     <div class="small-12 medium-12 large-6 columns">
-                        <h3 style="text-align: center">Общая сумма выплат</h3>
+                        <h3 style="text-align: center">Общая суммат</h3>
                         <div class="cash-number">
                             <b>345,333 руб.</b>
                             <small>13, 544 счетов</small>
@@ -58,7 +58,7 @@
             </div>
         </div>
     </div>
-    <div class="small-12 small-medium-12 medium-4 columns">
+    <div class="small-12 small-medium-12 medium-4 columns" style="padding:0;">
         <div class="small-12 small-centered clearfix">
             <div class="small-12 columns">
                 <div class="small-12 small-centered block-component">
