--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -9,7 +9,7 @@
 
     </div>
     <div class="small-12 show-for-small-only account-header">
-        <b class="accountName">Здраствуйте, {{loginName}}</b>
+        <b class="accountName">Здравствуйте, {{loginName}}</b>
         <a href="javascript:void(0)" on-click="logout">Выйти</a>
     </div>
     <div class="large-6 medium-5 small-12 columns">
@@ -32,7 +32,7 @@
 
     </div>
     <div class="large-3 medium-4 small-12 columns account-header show-for-medium">
-            <b class="accountName">Здраствуйте, {{loginName}}</b>
+            <b class="accountName">Здравствуйте, {{loginName}}</b>
         <a href="javascript:void(0)" on-click="logout">Выйти</a>
     </div>
 </div>
