--- a/app/templates/pages/account-info.html
+++ b/app/templates/pages/account-info.html
@@ -1,5 +1,5 @@
 <div class="small-12 account-info block-component clearfix">
-    <div class="small-6 columns">
+    <div class="large-6 medium-6 small-12 columns">
         <div class="inner-account-info">
             <h4>ЗАО «Стройтехинжиниринг»</h4>
             <p>Номер счета: {{accountNumber}}</p>
@@ -8,7 +8,7 @@
             <p>Скидка: {{discount}}</p>
         </div>
     </div>
-    <div class="small-6 columns chart-item" id="chart-item">
+    <div class="large-6 medium-6 small-12 columns chart-item" id="chart-item">
 
     </div>
 </div>
