--- a/app/templates/pages/accounts.html
+++ b/app/templates/pages/accounts.html
@@ -1,13 +1,42 @@
-<div class="inner-accounts">
-    <div class="tabs">
-        <ul class="inner-tabs">
-            <li><a href="#accounts/new">Новые</a></li>
-            <li><a href="#accounts/get">Полученные предложения</a></li>
-            <li><a href="#accounts/aprove">Подтверденные поставщиком</a></li>
-            <li><a href="#accounts/resolve">Финализированные</a></li>
-        </ul>
-    </div>
-    <div id="accountContainer" class="panel">
+<div class="row">
+    <div class="small-3 large-3 columns">
+        <div class="block-component">
 
+                <select>
+                    <option value="husker">Husker</option>
+                    <option value="starbuck">Starbuck</option>
+                    <option value="hotdog">Hot Dog</option>
+                    <option value="apollo">Apollo</option>
+                </select>
+
+            <div>
+                <div class="panel clearfix">
+                    <a class="left">Acme Inc</a>
+                    <span style="float: right!important;">$512.998</span>
+                </div>
+                <div class="panel clearfix">
+                    <a class="left">Widget Corp</a>
+                    <span style="float: right!important;">$102.998</span>
+                </div>
+                <div class="panel clearfix">
+                    <a class="left">123 warehousing</a>
+                    <span style="float: right!important;">$71.232</span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="small-9 large-9 columns">
+        <div class="inner-accounts">
+            <div class="tabs">
+                <ul class="inner-tabs">
+                    <li><a href="#accounts/new">Новые</a></li>
+                    <li><a href="#accounts/get">Полученные предложения</a></li>
+                    <li><a href="#accounts/aprove">Подтверденные поставщиком</a></li>
+                    <li><a href="#accounts/resolve">Финализированные</a></li>
+                </ul>
+            </div>
+            <div id="accountContainer" class="panel">
+            </div>
+        </div>
     </div>
 </div>
