--- a/app/templates/pages/aprove.html
+++ b/app/templates/pages/aprove.html
@@ -1,2 +1,14 @@
-
-<div class="js-grid"></div>
+<div class="small-12 clearfix block-component">
+    <div class="small-6 columns">
+        <h3>Подтверденные поставщиком</h3>
+    </div>
+    <div class="small-6 columns">
+        <div class="free-cash">
+            <b>Свободные денежные средства: </b>
+            <span>123.000 руб.</span>
+        </div>
+    </div>
+    <div class="small-12">
+        <div class="js-grid"></div>
+    </div>
+</div>
