--- a/app/templates/pages/accounts.html
+++ b/app/templates/pages/accounts.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="small-12 columns">
     <div class="small-3 large-3 columns">
         <div class="block-component">
 
