--- a/app/templates/pages/accounts.html
+++ b/app/templates/pages/accounts.html
@@ -1,5 +1,5 @@
 <div class="small-12 columns">
-    <div class="small-3 large-3 columns">
+    <div class="small-12 medium-4 large-3 columns">
         <div class="block-component">
 
                 <select>
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-    <div class="small-9 large-9 columns">
+    <div class="small-12 medium-8 large-9 columns">
         <div class="inner-accounts">
             <div class="tabs">
                 <ul class="inner-tabs">
