--- a/app/templates/pages/get.html
+++ b/app/templates/pages/get.html
@@ -1,9 +1,9 @@
 
 <div class="small-12 clearfix block-component">
-    <div class="small-4 columns">
+    <div class="small-12 medium-12 large-4 columns">
         <h3>Полученные предложения</h3>
     </div>
-    <div class="small-8 columns">
+    <div class="small-12 medium-12 large-8 columns">
         <div class="free-cash">
             <b>Свободные денежные средства: </b>
             <span>123.000 руб.</span>
