делаю кнопки для счетов

--- a/app/templates/pages/new.html
+++ b/app/templates/pages/new.html
@@ -8,7 +8,19 @@
             <span>123.000 руб.</span>
         </div>
     </div>
-    <div class="small-12">
+    <div class="small-4 columns">
+        <a href="#accounts/new" class="button btn-info">Загрузить счета</a>
+    </div>
+    <div class="small-8 columns">
+        <input type="text" placeholder="Поиск по:"/>
+    </div>
+    <div class="small-12 columns">
         <div class="js-grid"></div>
+    </div>
+    <div class="small-4 columns">
+        <a href="#accounts/new" class="button btn-info">Предоставить скидку</a>
+    </div>
+    <div class="small-4 columns">
+        <a href="#accounts/new" class="button btn-info">Удалить</a>
     </div>
 </div>
