--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -18,7 +18,8 @@
                 </div>
             </div>
             <div class="large-6 medium-6 small-12 columns" data-equalizer-watch="left">
-                <div class="small-12 small-centered block-component clearfix">
+                <div class="small-12 small-centered block-component clearfix summary-component">
+
                     <div class="small-12 medium-12 large-6 columns">
                         <h3 style="text-align: center">Общая суммат</h3>
                         <div class="cash-number">
