--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -1,8 +1,13 @@
 <div class="dashboard-wrapper clearfix">
     <div class="small-12 small-medium-12 medium-8 columns" style="padding:0;">
         <div class="small-12 small-centered clearfix">
-            <div class="large-6 medium-6 small-12 columns" data-equalizer="left">
+            <div class="large-8 medium-8 small-12 columns" data-equalizer="left">
                 <div class="small-12 small-centered block-component notification-component">
+                    <h3 class="block-component-header">
+                        Уведомления (12)
+                    </h3>
+
+                    <!--
                     <h3>Уведомления<div class="label-count">23</div></h3>
                     <ul>
                         <li class="callout primary">
@@ -15,9 +20,11 @@
                     <div class="button-group">
                         <a href="#notifications" class="button btn-info">Перейти >></a>
                     </div>
+                    -->
+
                 </div>
             </div>
-            <div class="large-6 medium-6 small-12 columns" data-equalizer-watch="left">
+            <div class="large-4 medium-4 small-12 columns" data-equalizer-watch="left">
                 <div class="small-12 small-centered block-component clearfix summary-component">
 
                     <div class="small-12 medium-12 large-6 columns">
