1.примерно сделал блок уведомлений

--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -6,6 +6,57 @@
                     <h3 class="block-component-header">
                         Уведомления (12)
                     </h3>
+                    <hr>
+                    <div>
+                        <div style="position: relative">
+                            <div class="notification-label" style="background-color: #02a2a0"></div>
+                            <div class="notification-message">
+                                <div class="small-12 small-medium-12 medium-12 columns">
+                                    <div class="notification-message-time">
+                                        14:45 12.02.2016
+                                    </div>
+                                </div>
+                                <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
+                                    <div class="notification-message-text">
+                                        <a href="#">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div style="position: relative">
+                            <div class="notification-label" style="background-color: #6f2079"></div>
+                            <div class="notification-message">
+                                <div class="small-12 small-medium-12 medium-12 columns">
+                                    <div class="notification-message-time">
+                                        14:45 12.02.2016
+                                    </div>
+                                </div>
+                                <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
+                                    <div class="notification-message-text">
+                                        <a href="#">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div style="position: relative">
+                            <div class="notification-label" style="background-color: #0191da"></div>
+                            <div class="notification-message">
+                                <div class="small-12 small-medium-12 medium-12 columns">
+                                    <div class="notification-message-time">
+                                        14:45 12.02.2016
+                                    </div>
+                                </div>
+                                <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
+                                    <div class="notification-message-text">
+                                        <a href="#">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
 
                     <!--
                     <h3>Уведомления<div class="label-count">23</div></h3>
@@ -27,6 +78,14 @@
             <div class="large-4 medium-4 small-12 columns" data-equalizer-watch="left">
                 <div class="small-12 small-centered block-component clearfix summary-component">
 
+                    <div class="small-12 medium-12 large-12 columns">
+                        <h3 style="text-align: center">Общая сумма</h3>
+                        <div class="cash-number">
+                            <b>345,333 руб.</b>
+                            <small>13, 544 счетов</small>
+                        </div>
+                    </div>
+                    <!--
                     <div class="small-12 medium-12 large-6 columns">
                         <h3 style="text-align: center">Общая суммат</h3>
                         <div class="cash-number">
@@ -41,6 +100,7 @@
                             <small>9,45% средняя скидка</small>
                         </div>
                     </div>
+                    -->
                 </div>
             </div>
         </div>
