--- a/app/css/main.css
+++ b/app/css/main.css
@@ -251,6 +251,44 @@ nav.main-menu a.active {
     font-weight: 900;
 }
 
+.notification-label{
+    position: absolute;
+    top: 20px;
+    font-size: 12px;
+    left: -10px;
+    margin-left: 20px;
+    /*background: #901D1D;*/
+    padding: 6px 6px;
+    border-radius: 97px;
+    font-weight: 900;
+}
+
+hr{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: #e9ecf1;
+}
+
+.notification-message{
+    margin-left: 20px;
+    font-family: robotoRegular;
+}
+
+.notification-message-time{
+    color: #abb4c5;
+}
+
+.notification-message-text{
+    height: 30px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.notification-message-text a{
+    color: #0292db;
+}
+
 svg {
     width: 100%;
     height: 100%;
@@ -429,8 +467,14 @@ nav.main-menu.main-menu-small a:hover {
 
 @font-face {
     font-family: robotoCondensedLightHeader;
-    font-size: 21px;
+    font-size: 21pt;
     src: url(../fonts/ROBOTOCONDENSED-LIGHT.ttf);
+}
+
+@font-face {
+    font-family: robotoRegular;
+    font-size: 12pt;
+    src: url(../fonts/Roboto-Regular.ttf);
 }
 
 
