--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -79,28 +79,29 @@
                 <div class="small-12 small-centered block-component clearfix summary-component">
 
                     <div class="small-12 medium-12 large-12 columns">
-                        <h3 style="text-align: center">Общая сумма</h3>
+                        <h3>Общая сумма</h3>
                         <div class="cash-number">
                             <b>345,333 руб.</b>
                             <small>13, 544 счетов</small>
                         </div>
                     </div>
-                    <!--
-                    <div class="small-12 medium-12 large-6 columns">
-                        <h3 style="text-align: center">Общая суммат</h3>
+                    <hr style="padding-top: 20px;">
+                    <div class="small-12 medium-12 large-12 columns">
+                        <h3>Прибыль</h3>
                         <div class="cash-number">
-                            <b>345,333 руб.</b>
-                            <small>13, 544 счетов</small>
+                            <b style="color: #0091da">23,119 руб.</b>
+                            <small>9,45% средняя скидка </small>
                         </div>
                     </div>
-                    <div class="small-12 medium-12 large-6 columns">
-                        <h3 style="text-align: center">Прибыль</h3>
-                        <div class="cash-number">
-                            <b>23,119 руб.</b>
-                            <small>9,45% средняя скидка</small>
-                        </div>
-                    </div>
-                    -->
+                </div>
+            </div>
+        </div>
+
+        <div class="small-12 small-centered clearfix">
+            <div class="small-12 columns">
+                <div class="small-12 block-component small-centered">
+                    <h3>График</h3>
+                    <div id="container" style="min-width: 310px; height: 400px;"></div>
                 </div>
             </div>
         </div>
@@ -114,14 +115,6 @@
                     <div class="button-group">
                         <a href="#accounts/new" class="button btn-info">Перейти >></a>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="small-12 small-centered clearfix">
-            <div class="small-12 columns">
-                <div class="small-12 block-component small-centered">
-                    <h3>График</h3>
-                    <div id="container" style="min-width: 310px; height: 400px;"></div>
                 </div>
             </div>
         </div>
