Сделал примерно верхнюю панель

--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -3,7 +3,10 @@
     <div class="large-3 medium-3 small-12 columns">
 
         <div class="brand">
+            <!--
             <h3>KPMG</h3>
+            -->
+            <img style="height: 35px;" src="app/images/KPMG-logo.png">
             <h4 class="subheader">Казначейская платформа</h4>
         </div>
 
@@ -31,9 +34,14 @@
         </nav>
 
     </div>
-    <div class="large-3 medium-4 small-12 columns account-header show-for-medium">
+    <div class="large-3 medium-4 small-12 columns account-header show-for-medium" style="line-height: 69px;">
+        <!--
             <b class="accountName">Здравствуйте, {{loginName}}</b>
         <a href="javascript:void(0)" on-click="logout">Выйти</a>
+        -->
+        <img style="height: 48px; top:10px; position: absolute;" src="app/images/q1.png">
+        <span style=" color: white; margin-left: 55px;">Виктор Иванов</span>
+        <span style=" color: white; margin-left: 55px;">Выйти</span>
     </div>
 </div>
 {{/accountToken}}
