--- a/app/css/main.css
+++ b/app/css/main.css
@@ -119,7 +119,7 @@ h3{ /* переопредел€ю foundation */
 .inner-header .brand h4.subheader{
     color: #D0D0D0;
     font-size: 12px;
-    margin-top: -9px;
+    margin-top: 0px;
 }
 
 nav.main-menu {
@@ -132,7 +132,7 @@ nav.main-menu a {
     margin: 10px 10px;
     padding: 10px 3px;
     border-bottom: 5px solid transparent;
-    font-family: robotoCondensed;
+    font-family: robotoCondensedLight;
 }
 
 nav.main-menu a:hover {
