--- a/app/templates/layout/header.html
+++ b/app/templates/layout/header.html
@@ -41,7 +41,7 @@
         -->
         <img style="height: 48px; top:10px; position: absolute;" src="app/images/q1.png">
         <span style=" color: white; margin-left: 55px;">Виктор Иванов</span>
-        <span style=" color: white; margin-left: 55px;">Выйти</span>
+        <span style=" color: white; margin-left: 55px;" on-click="logout">Выйти</span>
     </div>
 </div>
 {{/accountToken}}
