refactor common cpmponent

--- a/app/templates/pages/common-panel.html
+++ b/app/templates/pages/common-panel.html
@@ -1,3 +1,4 @@
+{{#accountToken}}
 <div class="large-6 medium-6 small-6 columns">
     <h3 class="page-name">
         {{pageName}}
@@ -8,3 +9,4 @@
         Последний вход вчера в 12:24
     </p>
 </div>
+{{/accountToken}}
