Делаю страницу счетов Меняю курсор в заголовке

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -192,10 +192,11 @@ nav.main-menu a.active {
     margin: 0;
 }
 
+/*
 .summary-component, .notification-component{
     height: 294px;
 }
-
+*/
 .notification-component .callout.alert {
     background-color: rgb(255, 255, 255);
     color: #212121;
