--- a/app/templates/pages/dashboard.html
+++ b/app/templates/pages/dashboard.html
@@ -18,7 +18,7 @@
                                 </div>
                                 <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
                                     <div class="notification-message-text">
-                                        <a href="#">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                        <a href="#accounts">Есть новые предложения то поставщиков, ожидающие прибытия</a>
                                     </div>
                                 </div>
                             </div>
@@ -34,7 +34,7 @@
                                 </div>
                                 <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
                                     <div class="notification-message-text">
-                                        <a href="#">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                        <a href="#accounts">Есть новые предложения то поставщиков, ожидающие прибытия</a>
                                     </div>
                                 </div>
                             </div>
@@ -50,7 +50,7 @@
                                 </div>
                                 <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
                                     <div class="notification-message-text">
-                                        <a href="#">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                        <a href="#accounts">Есть новые предложения то поставщиков, ожидающие прибытия</a>
                                     </div>
                                 </div>
                             </div>
