--- a/app/templates/pages/notifications.html
+++ b/app/templates/pages/notifications.html
@@ -1,6 +1,7 @@
 <div class="inner-notifications clearfix">
     <div class="small-12 columns">
         <div class="small-12 small-centered block-component notification-component">
+            <!--
             <ul>
                 <li class="callout primary">
                     Есть новые предложения от поставщиков, ожидающие подтверждения
@@ -26,6 +27,124 @@
                 </li>
 
             </ul>
+            -->
+            <div>
+                <hr>
+                <div>
+                    <div style="position: relative">
+                        <div class="notification-label" style="background-color: #02a2a0"></div>
+                        <div class="notification-message">
+                            <div class="small-12 small-medium-12 medium-12 columns">
+                                <div class="notification-message-time">
+                                    14:45 12.02.2016
+                                </div>
+                            </div>
+                            <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
+                                <div class="notification-message-text">
+                                    <a href="#accounts">Есть новые предложения от поставщиков, ожидающие подтверждения</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div style="position: relative">
+                        <div class="notification-label" style="background-color: #6f2079"></div>
+                        <div class="notification-message">
+                            <div class="small-12 small-medium-12 medium-12 columns">
+                                <div class="notification-message-time">
+                                    14:45 12.02.2016
+                                </div>
+                            </div>
+                            <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
+                                <div class="notification-message-text">
+                                    <a href="#accounts">Получено сообщение от поставщика ООО «ЗаботаПлюс»</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div style="position: relative">
+                        <div class="notification-label" style="background-color: #0191da"></div>
+                        <div class="notification-message">
+                            <div class="small-12 small-medium-12 medium-12 columns">
+                                <div class="notification-message-time">
+                                    14:45 12.02.2016
+                                </div>
+                            </div>
+                            <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
+                                <div class="notification-message-text">
+                                    <a href="#accounts">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div style="position: relative">
+                        <div class="notification-label" style="background-color: #0191da"></div>
+                        <div class="notification-message">
+                            <div class="small-12 small-medium-12 medium-12 columns">
+                                <div class="notification-message-time">
+                                    14:45 12.02.2016
+                                </div>
+                            </div>
+                            <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
+                                <div class="notification-message-text">
+                                    <a href="#accounts">сть новые предложения от поставщиков, ожидающие подтверждения</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div style="position: relative">
+                        <div class="notification-label" style="background-color: #02a2a0"></div>
+                        <div class="notification-message">
+                            <div class="small-12 small-medium-12 medium-12 columns">
+                                <div class="notification-message-time">
+                                    14:45 12.02.2016
+                                </div>
+                            </div>
+                            <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
+                                <div class="notification-message-text">
+                                    <a href="#accounts">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div style="position: relative">
+                        <div class="notification-label" style="background-color: #6f2079"></div>
+                        <div class="notification-message">
+                            <div class="small-12 small-medium-12 medium-12 columns">
+                                <div class="notification-message-time">
+                                    14:45 12.02.2016
+                                </div>
+                            </div>
+                            <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
+                                <div class="notification-message-text">
+                                    <a href="#accounts">Получено сообщение от поставщика ООО «ЗаботаПлюс»</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div style="position: relative">
+                        <div class="notification-label" style="background-color: #02a2a0"></div>
+                        <div class="notification-message">
+                            <div class="small-12 small-medium-12 medium-12 columns">
+                                <div class="notification-message-time">
+                                    14:45 12.02.2016
+                                </div>
+                            </div>
+                            <div class="small-12 small-medium-12 medium-12 columns" style="height: 30px">
+                                <div class="notification-message-text">
+                                    <a href="#accounts">Есть новые предложения то поставщиков, ожидающие прибытия</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+            </div>
         </div>
     </div>
 </div>
