--- a/app/templates/pages/accounts.html
+++ b/app/templates/pages/accounts.html
@@ -26,16 +26,19 @@
         </div>
     </div>
     <div class="small-12 medium-8 large-9 columns">
-        <div class="inner-accounts">
-            <div class="tabs">
-                <ul class="inner-tabs">
-                    <li><a href="#accounts/new">Новые</a></li>
-                    <li><a href="#accounts/get">Полученные предложения</a></li>
-                    <li><a href="#accounts/aprove">Подтверденные поставщиком</a></li>
-                    <li><a href="#accounts/resolve">Финализированные</a></li>
-                </ul>
-            </div>
-            <div id="accountContainer" class="panel">
+        <div class="block-component">
+            <div class="inner-accounts">
+                <div class="tabs" style="margin-top: 20px;">
+                    <ul class="inner-tabs" style="height: 50px;">
+                        <li><a href="#accounts/new">Новые</a></li>
+                        <li><a href="#accounts/get">Полученные предложения</a></li>
+                        <li><a href="#accounts/aprove">Подтверденные поставщиком</a></li>
+                        <li><a href="#accounts/resolve">Финализированные</a></li>
+                    </ul>
+                </div>
+
+                <div id="accountContainer" class="panel">
+                </div>
             </div>
         </div>
     </div>
