--- a/app/templates/pages/get.html
+++ b/app/templates/pages/get.html
@@ -1,15 +1,25 @@
 
 <div class="small-12 clearfix block-component">
-    <div class="small-12 medium-12 large-4 columns">
+    <div class="small-12 medium-12 large-6 columns">
         <h3>Полученные предложения</h3>
     </div>
-    <div class="small-12 medium-12 large-8 columns">
-        <div class="free-cash">
-            <b>Свободные денежные средства: </b>
-            <span>123.000 руб.</span>
-        </div>
+    <div class="small-12 medium-12 large-6 columns">
+        <input type="text" placeholder="Поиск"/>
     </div>
-    <div class="small-12">
+    <hr>
+    <div class="small-12 medium-12 large-12 columns" style="font-size: 16pt;
+        font-family: robotoCondensedLight; color: #727989; padding-bottom: 10px">
+        Свободные денежные средства: <span style="color: #0085d4">345,333 руб</span>
+    </div>
+    <hr>
+    <div class="small-4 large-12 columns">
+        <a href="#accounts/new" class="button btn-info">Загрузить счета</a>
+        <a href="#accounts/new" class="button btn-info" >Предоставить скидку</a>
+        <a href="#accounts/new" class="button btn-info" >Удалить</a>
+    </div>
+
+
+    <div class="small-12 columns">
         <div class="js-grid"></div>
     </div>
 </div>
